--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 </head>
 
 <body>
+    <!-- Navbar -->
     <nav class="navbar container bg-body-light">
-        <div class="container-fluid">
+        <div class="container-fluid w-100">
             <a class="navbar-brand" href="#">
                 <img src="img/Frame 175.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 LOGO
@@ -25,81 +26,63 @@
             </div>
         </div>
     </nav>
+
+    <!-- Hero Section -->
     <section class="section-1">
         <div class="position-relative">
-            <!-- Background image -->
-            <img src="img/gradient image.png" class="img-fluid w-100" style="height: auto; width: 100%;" alt="Background">
-
-            <!-- Overlay content -->
-            <div class="position-absolute align-items-lg-center align-items-start  text-white top-0 start-0 w-100" style="padding-top: 10px;">
-                <div class="container mt-sm-1 px-4 px-md-5">
-                    <p class="fs-6  fs-md-3 fs-lg-1">May - July</p>
+            <img src="img/gradient image.png" class="img-fluid w-100" alt="Background">
+            <div class="position-absolute align-items-lg-center align-items-start text-white top-0 start-0 w-100" style="padding-top: 10px;">
+                <div class="container-fluid mt-sm-1 px-4 px-md-5">
+                    <p class="fs-6 fs-md-3 fs-lg-1">May - July</p>
                     <h2 class="mb-1 fs-5 fs-md-5">
                         Write a captivating header here
                         <br class="d-none d-md-block"> to engage your customers
                     </h2>
-                    <p class="fs-6 ">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit
-                        urna.
-                        Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris.
-                        Maecenas vitae mattis tellus. Nullam quis imperdiet augue. Vestibulum auctor ornare leo, non
-                        suscipit magna
-                        interdum eu. Curabitur pellentesque nibh nibh, at maximus ante fermentum sit amet.
-                        Pellentesque commodo lacus at sodales sodales. Quisque sagittis orci ut diam condimentum, vel
-                        euismod erat
-                        placerat.
+                    <p class="fs-6 mb-1">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna.
                     </p>
-                    <button type="button" class="btn btn-light mt-2">Call to action</button>
+                    <button type="button" class="btn mb-5 btn-light mt-2">Call to action</button>
                 </div>
             </div>
         </div>
     </section>
 
-    <section style="height: 400px;" class="container section-2">
+    <!-- Subscription Section -->
+    <section class="container section-2" style="height: 400px;">
         <div class="row h-100 align-items-center">
-
-            <!-- Left Column -->
             <div class="col-md-6">
                 <p class="fs-1 mt-5">Subscribe to our <br> mailing list</p>
             </div>
-
-            <!-- Right Column -->
             <div class="col-md-6">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi.
                     Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis
                     ligula consectetur, ultrices mauris. Maecenas vitae mattis.
                 </p>
-                <div class="container d-flex mt-5">
+                <div class="mt-5">
                     <div class="row">
+                        <div class="col-12 mb-2">
+                            <input type="text" name="name" class="form-control" style="border: none;" placeholder="Name">
+                            <hr>
+                        </div>
+                        <div class="col-12 mb-3">
+                            <input type="email" name="email" class="form-control" style="border: none;" placeholder="Email">
+                            <hr>
+                        </div>
                         <div class="col-12">
-                            <input type="text" name="" style="border: none;" class="form-control form-underline"
-                                placeholder="Name">
-                            <hr>
-                        </div>
-                        <div class="col">
-                            <input type="tel" name="Phone" style="border: none;" class="form-control form-underline"
-                                placeholder="Email">
-                            <hr>
-                        </div>
-                        <div class="ms-5">
-                            <button type="button" style="background-color: #262626; border-radius: 50px; color: #fff;"
-                                class="btn">
+                            <button type="button" class="btn" style="background-color: #262626; border-radius: 50px; color: #fff;">
                                 Call to action
                             </button>
                         </div>
                     </div>
                 </div>
-    </section>
-    </div>
-
-    </div>
+            </div>
+        </div>
     </section>
 
+    <!-- Call to Action with Image -->
     <section class="section-3" style="min-height: 400px;">
         <div class="row g-0 align-items-stretch h-100">
-
-            <!-- Left Column -->
             <div class="col-md-6 d-flex flex-column justify-content-center" style="background-color: #7717D7;">
                 <div class="p-5 text-white">
                     <p class="fs-1">
@@ -108,130 +91,109 @@
                     <button type="button" class="btn btn-light mt-3">Call to action</button>
                 </div>
             </div>
-
-            <!-- Right Column -->
             <div class="col-md-6">
-                <div style="height: 100%; width: 100%;">
-                    <img src="img/Rectangle 73.png" alt="Header Image" class="w-100 h-100 object-fit-cover d-block">
-                </div>
+                <img src="img/Rectangle 73.png" alt="Header Image" class="w-100 h-100 object-fit-cover d-block">
             </div>
-
         </div>
     </section>
 
-
+    <!-- Image & Text Side-by-Side -->
     <section class="mt-5 container section-4" style="min-height: 100vh;">
         <div class="row h-100 align-items-start">
-
-            <!-- Left Column -->
             <div class="col-md-6 col-12 pt-4">
                 <img src="img/Rectangle 74.png" alt="Header Image" class="img-fluid w-100 object-fit-cover">
             </div>
-
-            <!-- Right Column -->
             <div class="col-md-6 col-12 pt-4 text-wrap">
                 <p class="fs-1 px-5">
                     Write a captivating <br> header here to <br> engage your <br> customers
                 </p>
-                <p class="px-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nostrum qui
-                    corporis nulla repellat suscipit beatae corrupti atque saepe, fugiat neque quas est maxime
-                    accusantium tempore dolorum sapiente inventore debitis.</p>
+                <p class="px-5">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nostrum qui
+                    corporis nulla repellat suscipit beatae corrupti atque saepe, fugiat neque quas est
+                    maxime accusantium tempore dolorum sapiente inventore debitis.
+                </p>
                 <div class="px-5">
-                    <button type="button" style="background-color: #7717D7;" class="btn text-white btn-light">Call to
-                        action</button>
+                    <button type="button" style="background-color: #7717D7;" class="btn text-white">Call to action</button>
                 </div>
             </div>
-
         </div>
     </section>
 
-
+    <!-- Dual Column Content -->
     <section class="section-5" style="min-height: 400px;">
         <div class="row g-0 align-items-stretch h-100">
-
-            <!-- Left Column -->
             <div class="col-md-6 d-flex flex-column justify-content-center" style="background-color: #7717D7;">
                 <div class="p-5 text-white">
-                    <p class="fs-1">
-                        NUMBER 1
+                    <p class="fs-1">NUMBER 1</p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut ad sit atque aperiam adipisci,
+                        voluptate explicabo eaque, dicta consectetur officiis at architecto iste. A, id. Similique repellat
+                        earum iste.
                     </p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut ad sit atque aperiam adipisci,
-                    voluptate explicabo eaque, dicta consectetur officiis at architecto iste. A, id. Similique repellat
-                    earum iste.
                     <button type="button" class="btn ps-5 pe-5 btn-light text-center mt-3">Call to action</button>
                 </div>
             </div>
-
-            <!-- Right Column -->
             <div class="col-md-6 d-flex flex-column justify-content-center" style="background-color: #7717D7;">
                 <div class="p-5 text-white">
-                    <p class="fs-1">
-                        NUMBER 2
-                    </p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, magni, pariatur qui dolor
+                    <p class="fs-1">NUMBER 2</p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, magni, pariatur qui dolor
                         laboriosam perspiciatis cum nisi maxime aut earum tenetur. Architecto ullam sint vel modi ipsum
-                        consequuntur animi expedita.</p>
+                        consequuntur animi expedita.
+                    </p>
                 </div>
             </div>
-
         </div>
     </section>
 
-
+    <!-- Speaker Section -->
     <section class="section5">
         <div class="container my-5">
             <div class="row gy-5">
-
-                <!-- First Image + Text Row -->
                 <div class="col-6">
                     <div class="d-flex flex-column flex-md-row align-items-start">
-                        <img src="img/Rectangle 77.png" class="img-fluid me-md-4 mb-3 mb-md-0" style="max-width: 200px;"
-                            alt="Image 1">
+                        <img src="img/Rectangle 77.png" class="img-fluid me-md-4 mb-3 mb-md-0" style="max-width: 200px;" alt="Image 1">
                         <div>
-                            <h5 class="fs-1 text">Speaker <br> Name</h5>
-                            <p class="fs-4 text">Lorem, ipsum dolor.</p>
+                            <h5 class="fs-1">Speaker <br> Name</h5>
+                            <p class="fs-4">Lorem, ipsum dolor.</p>
                             <p>Lorem, ipsum dolor.</p>
                         </div>
                     </div>
                 </div>
-
-                <!-- Second Image + Text Row -->
                 <div class="col-6">
                     <div class="d-flex flex-column flex-md-row align-items-start">
-                        <img src="img/Rectangle 77 (1).png" class="img-fluid me-md-4 mb-3 mb-md-0"
-                            style="max-width: 200px;" alt="Image 2">
+                        <img src="img/Rectangle 77 (1).png" class="img-fluid me-md-4 mb-3 mb-md-0" style="max-width: 200px;" alt="Image 2">
                         <div>
-                            <h5 class="fs-1 text">Speaker <br> Name</h5>
-                            <p class="fs-4 text">Lorem, ipsum dolor.</p>
+                            <h5 class="fs-1">Speaker <br> Name</h5>
+                            <p class="fs-4">Lorem, ipsum dolor.</p>
                             <p>Lorem, ipsum dolor.</p>
                         </div>
                     </div>
                 </div>
-
+            </div>
+            <div class="container fs-1 text-center mt-5">
+                Write a captivating header here <br> to engage your customers
             </div>
         </div>
-        <div class="container fs-1 text-center">Write a captivating header here <br> to engage your customers</div>
     </section>
 
-<footer>
-
- <nav class="navbar container bg-body-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="img/Frame 175.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                LOGO
-            </a>
-            <div class="d-inline-block nav-items">
-                <h2 class="d-inline-block bi bi-instagram"></h2>
-                <h2 class="d-inline-block bi bi-facebook"></h2>
+    <!-- Footer -->
+    <footer>
+        <nav class="navbar container bg-body-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="img/Frame 175.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    LOGO
+                </a>
+                <div class="d-inline-block nav-items">
+                    <h2 class="d-inline-block bi bi-instagram"></h2>
+                    <h2 class="d-inline-block bi bi-facebook"></h2>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </footer>
 
-</footer>
-
-
-
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
