adjusted the height of section 1 image

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Hero Section -->
     <section class="section-1">
         <div class="position-relative">
-            <img src="img/gradient image.png" class="img-fluid w-100" alt="Background">
+            <img style="height: 300px;" src="img/gradient image.png" class="img-fluid w-100" alt="Background">
             <div class="position-absolute align-items-lg-center align-items-start text-white top-0 start-0 w-100" style="padding-top: 10px;">
                 <div class="container-fluid mt-sm-1 px-4 px-md-5">
                     <p class="fs-6 fs-md-3 fs-lg-1">May - July</p>
@@ -48,7 +48,7 @@
     </section>
 
     <!-- Subscription Section -->
-    <section class="container section-2" style="height: 400px;">
+    <section class="container section-2" style="height: 600px;">
         <div class="row h-100 align-items-center">
             <div class="col-md-6">
                 <p class="fs-1 mt-5">Subscribe to our <br> mailing list</p>
@@ -179,7 +179,7 @@
 
     <!-- Footer -->
     <footer>
-        <nav class="navbar container bg-body-light">
+        <nav class="navbar containe  b  b r bg-body-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="img/Frame 175.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
